# yesqa

./: .coveragerc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  README.md  azure-pipelines.yml  setup.cfg  setup.py  tox.ini  yesqa.py
.github/workflows/: main.yml
tests/: yesqa_test.py
