[metadata]
name = yesqa
version = 1.0.0
description = Automatically remove unnecessary `# noqa` comments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/yesqa
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = yesqa
install_requires =
    flake8>=3.7
    tokenize-rt>=2.1
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    yesqa = yesqa:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
